# PreconditionerAI

./: README.md  createPreconditioner.py
DealScripts/: .gitignore  CMakeLists.txt  convert_dataset_npz.py  main.cc
DealScripts/dataset/cuthill/: system_1313_0.100000_0.100000.npz  system_1313_0.100000_0.200000.npz  system_1313_0.100000_0.300000.npz  system_1313_0.100000_0.400000.npz  system_1313_0.100000_0.500000.npz  system_1313_0.100000_0.600000.npz  system_1313_0.100000_0.700000.npz  system_1313_0.100000_0.800000.npz  system_1313_0.100000_0.900000.npz  system_1313_0.100000_1.000000.npz  system_1313_0.200000_0.100000.npz  system_1313_0.200000_0.200000.npz  system_1313_0.200000_0.300000.npz  system_1313_0.200000_0.400000.npz  system_1313_0.200000_0.500000.npz  system_1313_0.200000_0.600000.npz  system_1313_0.200000_0.700000.npz  system_1313_0.200000_0.800000.npz  system_1313_0.200000_0.900000.npz  system_1313_0.200000_1.000000.npz  system_1313_0.300000_0.100000.npz  system_1313_0.300000_0.200000.npz  system_1313_0.300000_0.300000.npz  system_1313_0.300000_0.400000.npz  system_1313_0.300000_0.500000.npz  system_1313_0.300000_0.600000.npz  system_1313_0.300000_0.700000.npz  system_1313_0.300000_0.800000.npz  system_1313_0.300000_0.900000.npz  system_1313_0.300000_1.000000.npz  system_1313_0.400000_0.100000.npz  system_1313_0.400000_0.200000.npz  system_1313_0.400000_0.300000.npz  system_1313_0.400000_0.400000.npz  system_1313_0.400000_0.500000.npz  system_1313_0.400000_0.600000.npz  system_1313_0.400000_0.700000.npz  system_1313_0.400000_0.800000.npz  (+62 more)
(+204 files in other folders)
